--- a/JavaSE/课堂练习/practice_20220902_/pom.xml
+++ b/JavaSE/课堂练习/practice_20220902_/pom.xml
@@ -20,6 +20,11 @@
             <artifactId>lombok</artifactId>
             <version>1.18.24</version>
         </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
     </dependencies>
 
 </project>
