:beer: 完成20220902课堂作业-arrayList

--- a/JavaSE/作业/homework_20220902_/pom.xml
+++ b/JavaSE/作业/homework_20220902_/pom.xml
@@ -2,17 +2,15 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-
     <parent>
         <artifactId>SharingSky-SE2019-20221</artifactId>
         <groupId>cn.GnaixEuy</groupId>
         <version>1.0-SNAPSHOT</version>
         <relativePath>../../../pom.xml</relativePath>
     </parent>
-    <artifactId>practice_20220902_</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <modelVersion>4.0.0</modelVersion>
+
+    <artifactId>homework_20220902_</artifactId>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
