--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>JavaSE/作业/homework_20220902_</module>
         <module>JavaSE/课堂练习/practice_20220906_</module>
         <module>JavaSE/课堂练习/practice_20220907_</module>
+        <module>JavaSE/作业/homework_20220907_</module>
     </modules>
 
 </project>
