:beer: 提交20220908上午课堂练习-反射方法

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>JavaSE/课堂练习/practice_20220906_</module>
         <module>JavaSE/课堂练习/practice_20220907_</module>
         <module>JavaSE/作业/homework_20220907_</module>
+        <module>JavaSE/课堂练习/practice_20220908_</module>
     </modules>
 
 </project>
