--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,9 @@
         <module>JavaSE/课堂练习/practice_20220907_</module>
         <module>JavaSE/作业/homework_20220907_</module>
         <module>JavaSE/课堂练习/practice_20220908_</module>
+        <module>SQL/课堂练习/practice_20220909_</module>
+        <module>JavaSE/课堂练习/practice_20220913_</module>
+        <module>JavaSE/作业/homework_20220913_</module>
     </modules>
 
 </project>
