:beer: 提交20220914下午课堂作业-前端html页面

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <module>SQL/课堂练习/practice_20220909_</module>
         <module>JavaSE/课堂练习/practice_20220913_</module>
         <module>JavaSE/作业/homework_20220913_</module>
+        <module>JavaSE/课堂练习/practice_20220914_</module>
     </modules>
 
 </project>
